--- a/dashboard.html
+++ b/dashboard.html
@@ -2,173 +2,233 @@
 <html lang="en">
 
 <head>
+   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    background-color: #f4f4f4;
-}
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f4f4f4;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
 
-.sidebar {
-    width: 250px;
-    background-color: #2c3e50;
-    color: white;
-    position: fixed;
-    height: 100%;
-    padding-top: 20px;
-}
+        .sidebar {
+            width: 250px;
+            background-color: #2c3e50;
+            color: white;
+            position: fixed;
+            height: 100%;
+            padding-top: 20px;
+            z-index: 100;
+        }
 
-.sidebar h2 {
-    text-align: center;
-    margin-bottom: 30px;
-}
+        .sidebar h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
 
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-}
+        .sidebar ul {
+            list-style-type: none;
+            padding: 0;
+        }
 
-.sidebar ul li {
-    padding: 15px;
-    text-align: left;
-    border-bottom: 1px solid #34495e;
-}
+        .sidebar ul li {
+            padding: 15px;
+            text-align: left;
+            border-bottom: 1px solid #34495e;
+        }
 
-.sidebar ul li a {
-    color: white;
-    text-decoration: none;
-}
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+        }
 
-.sidebar ul li a i {
-    margin-right: 10px;
-}
+        .sidebar ul li a i {
+            margin-right: 10px;
+        }
 
-.sidebar ul li:hover {
-    background-color: #34495e;
-}
+        .sidebar ul li:hover {
+            background-color: #34495e;
+        }
 
-.main-content {
-    margin-left: 250px;
-    padding: 20px;
-}
+        .main-content {
+            margin-left: 250px;
+            padding: 20px;
+            flex-grow: 1;
+            transition: margin-left 0.3s ease;
+        }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #2980b9;
-    color: white;
-    padding: 10px 20px;
-}
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: #2980b9;
+            color: white;
+            padding: 10px 20px;
+        }
 
-.notification {
-    position: relative;
-    cursor: pointer;
-}
+        .notification {
+            position: relative;
+            cursor: pointer;
+        }
 
-.notification i {
-    font-size: 24px;
-    color: white;
-}
+        .notification i {
+            font-size: 24px;
+            color: white;
+        }
 
-.badge {
-    position: absolute;
-    top: -5px;
-    right: -5px;
-    background: red;
-    color: white;
-    font-size: 12px;
-    padding: 2px 6px;
-    border-radius: 50%;
-    display: none; /* Hidden by default */
-}
+        .badge {
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            background: red;
+            color: white;
+            font-size: 12px;
+            padding: 2px 6px;
+            border-radius: 50%;
+            display: none; /* Hidden by default */
+        }
 
-#notificationsContainer {
-    position: absolute;
-    top: 25px;
-    right: 0;
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 10px;
-    display: none;
-    width: 200px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-}
+        #notificationsContainer {
+            position: absolute;
+            top: 25px;
+            right: 0;
+            background-color: white;
+            border: 1px solid #ccc;
+            padding: 10px;
+            display: none;
+            width: 200px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            z-index: 10;
+        }
 
-#notificationsList {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+        #notificationsList {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-#notificationsList li {
-    padding: 5px 0;
-}
+        #notificationsList li {
+            padding: 5px 0;
+        }
 
-.cards {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-}
+        .cards {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+        }
 
-.card {
-    background: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    padding: 20px;
-    text-align: center;
-    width: 30%;
-}
+        .card {
+            background: white;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            padding: 20px;
+            text-align: center;
+            width: 30%;
+        }
 
-.card i {
-    font-size: 50px;
-    margin-bottom: 10px;
-}
+        .card i {
+            font-size: 50px;
+            margin-bottom: 10px;
+        }
 
-.card h3 {
-    margin: 10px 0;
-}
+        .card h3 {
+            margin: 10px 0;
+        }
 
-.card a {
-    text-decoration: none;
-    color: #2980b9;
-}
+        .card a {
+            text-decoration: none;
+            color: #2980b9;
+        }
 
-.table-section {
-    margin-top: 40px;
-}
+        .table-section {
+            margin-top: 40px;
+        }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-    background: white;
-    border-radius: 5px;
-    overflow: hidden;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+            background: white;
+            border-radius: 5px;
+            overflow: hidden;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
 
-th,
-td {
-    text-align: left;
-    padding: 15px;
-    border-bottom: 1px solid #ddd;
-}
+        th,
+        td {
+            text-align: left;
+            padding: 15px;
+            border-bottom: 1px solid #ddd;
+        }
 
-th {
-    background-color: #2980b9;
-    color: white;
-}
+        th {
+            background-color: #2980b9;
+            color: white;
+        }
 
-tr:hover {
-    background-color: #f1f1f1;
-}
+        tr:hover {
+            background-color: #f1f1f1;
+        }
 
+        /* Mobile Responsiveness */
+        @media (max-width: 768px) {
+            .sidebar {
+                width: 200px;
+                padding-top: 10px;
+            }
+
+            .main-content {
+                margin-left: 200px;
+            }
+
+            .cards {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .card {
+                width: 80%;
+                margin-bottom: 20px;
+            }
+
+            .header {
+                padding: 10px 15px;
+            }
+
+            table {
+                font-size: 14px;
+            }
+        }
+
+        @media (max-width: 600px) {
+            .sidebar {
+                display: none; /* Hide sidebar on small screens */
+            }
+
+            .main-content {
+                margin-left: 0;
+                padding: 10px;
+            }
+
+            .header {
+                justify-content: center;
+            }
+
+            .cards {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .card {
+                width: 90%;
+                margin-bottom: 15px;
+            }
     </style>
 </head>
 
