--- a/Chris.html
+++ b/Chris.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    body {
+    <style>
+        body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin: 0;
         padding: 0;
@@ -122,7 +123,8 @@
             font-size: 14px;
         }
     }
-</style>
+
+        
     </style>
     <script>
         function toggleForm() {
