--- a/dashboard.html
+++ b/dashboard.html
@@ -12,9 +12,6 @@
     font-family: Arial, sans-serif;
     margin: 0;
     background-color: #f4f4f4;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
 }
 
 .sidebar {
@@ -24,7 +21,7 @@
     position: fixed;
     height: 100%;
     padding-top: 20px;
-    z-index: 100;
+    transition: all 0.3s ease; /* Smooth transition */
 }
 
 .sidebar h2 {
@@ -59,8 +56,7 @@
 .main-content {
     margin-left: 250px;
     padding: 20px;
-    flex-grow: 1;
-    transition: margin-left 0.3s ease;
+    transition: margin-left 0.3s ease; /* Smooth transition */
 }
 
 .header {
@@ -121,6 +117,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    flex-wrap: wrap; /* Allow cards to wrap */
 }
 
 .card {
@@ -130,6 +127,7 @@
     padding: 20px;
     text-align: center;
     width: 30%;
+    margin-bottom: 20px; /* Space between cards */
 }
 
 .card i {
@@ -160,8 +158,7 @@ table {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-th,
-td {
+th, td {
     text-align: left;
     padding: 15px;
     border-bottom: 1px solid #ddd;
@@ -176,69 +173,70 @@ tr:hover {
     background-color: #f1f1f1;
 }
 
-/* Mobile Responsiveness */
+/* Mobile Styles */
 @media (max-width: 768px) {
     .sidebar {
         width: 200px;
         padding-top: 10px;
-        position: absolute; /* Make sidebar fixed on the side */
-        top: 0;
-        left: 0;
-        z-index: 100;
     }
 
     .main-content {
-        margin-left: 200px;
-    }
-
-    .cards {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .card {
-        width: 80%;
-        margin-bottom: 20px;
-    }
-
-    .header {
-        padding: 10px 15px;
-    }
-
-    table {
-        font-size: 14px;
-    }
-}
-
-@media (max-width: 600px) {
-    .sidebar {
-        position: absolute; /* Keep sidebar visible */
-        width: 180px;
-        padding-top: 10px;
-        top: 0;
-        left: 0;
-        z-index: 100;
-    }
-
-    .main-content {
-        margin-left: 180px; /* Adjust to sidebar width */
+        margin-left: 0;
         padding: 10px;
     }
 
     .header {
-        justify-content: center;
+        padding: 10px;
     }
 
     .cards {
-        flex-direction: column;
-        align-items: center;
+        display: block; /* Stack cards vertically */
     }
 
     .card {
-        width: 90%;
+        width: 100%;
         margin-bottom: 15px;
     }
+
+    table th, table td {
+        padding: 10px; /* Reduce padding for small screens */
+    }
 }
+
+@media (max-width: 480px) {
+    .sidebar {
+        width: 0; /* Hide sidebar */
+        overflow-x: hidden; /* Prevent scrolling */
+    }
+
+    .main-content {
+        margin-left: 0;
+        padding: 5px;
+    }
+
+    .header {
+        flex-direction: column; /* Stack header items */
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .notification {
+        font-size: 20px;
+    }
+
+    .cards {
+        display: block;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    table th, table td {
+        font-size: 12px; /* Adjust font size */
+    }
+}
+
 
 </style>
 </head>
