--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
 <title>Admin Dashboard</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <style>
-   body {
+  body {
     font-family: Arial, sans-serif;
     margin: 0;
     background-color: #f4f4f4;
@@ -21,7 +21,7 @@
     position: fixed;
     height: 100%;
     padding-top: 20px;
-    transition: all 0.3s ease; /* Smooth transition */
+    display: block; /* Ensure it's always displayed */
 }
 
 .sidebar h2 {
@@ -56,7 +56,6 @@
 .main-content {
     margin-left: 250px;
     padding: 20px;
-    transition: margin-left 0.3s ease; /* Smooth transition */
 }
 
 .header {
@@ -117,7 +116,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    flex-wrap: wrap; /* Allow cards to wrap */
 }
 
 .card {
@@ -127,7 +125,6 @@
     padding: 20px;
     text-align: center;
     width: 30%;
-    margin-bottom: 20px; /* Space between cards */
 }
 
 .card i {
@@ -158,7 +155,8 @@ table {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
-th, td {
+th,
+td {
     text-align: left;
     padding: 15px;
     border-bottom: 1px solid #ddd;
@@ -173,67 +171,65 @@ tr:hover {
     background-color: #f1f1f1;
 }
 
-/* Mobile Styles */
+/* Mobile Responsiveness */
 @media (max-width: 768px) {
     .sidebar {
-        width: 200px;
+        width: 250px;
         padding-top: 10px;
+        position: fixed;
+        top: 0;
+        left: 0;
     }
 
     .main-content {
-        margin-left: 0;
-        padding: 10px;
-    }
-
-    .header {
-        padding: 10px;
+        margin-left: 250px;
     }
 
     .cards {
-        display: block; /* Stack cards vertically */
+        flex-direction: column;
+        align-items: center;
     }
 
     .card {
-        width: 100%;
-        margin-bottom: 15px;
+        width: 80%;
+        margin-bottom: 20px;
     }
 
-    table th, table td {
-        padding: 10px; /* Reduce padding for small screens */
+    .header {
+        padding: 10px 15px;
+    }
+
+    table {
+        font-size: 14px;
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
     .sidebar {
-        width: 0; /* Hide sidebar */
-        overflow-x: hidden; /* Prevent scrolling */
+        width: 200px; /* Adjust the width for smaller screens */
+        padding-top: 10px;
+        position: fixed;
+        top: 0;
+        left: 0;
     }
 
     .main-content {
-        margin-left: 0;
-        padding: 5px;
-    }
-
-    .header {
-        flex-direction: column; /* Stack header items */
-        align-items: flex-start;
+        margin-left: 200px;
         padding: 10px;
     }
 
-    .notification {
-        font-size: 20px;
+    .header {
+        justify-content: center;
     }
 
     .cards {
-        display: block;
+        flex-direction: column;
+        align-items: center;
     }
 
     .card {
-        width: 100%;
-    }
-
-    table th, table td {
-        font-size: 12px; /* Adjust font size */
+        width: 90%;
+        margin-bottom: 15px;
     }
 }
 
