--- a/dashboard.html
+++ b/dashboard.html
@@ -2,236 +2,172 @@
 <html lang="en">
 
 <head>
-   <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Dashboard</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<style>
-  body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background-color: #f4f4f4;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: #f4f4f4;
+}
 
-        .sidebar {
-            width: 250px;
-            background-color: #2c3e50;
-            color: white;
-            position: fixed;
-            height: 100%;
-            padding-top: 20px;
-        }
+.sidebar {
+    width: 250px;
+    background-color: #2c3e50;
+    color: white;
+    position: fixed;
+    height: 100%;
+    padding-top: 20px;
+}
 
-        .sidebar h2 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
+.sidebar h2 {
+    text-align: center;
+    margin-bottom: 30px;
+}
 
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+}
 
-        .sidebar ul li {
-            padding: 15px;
-            text-align: left;
-            border-bottom: 1px solid #34495e;
-        }
+.sidebar ul li {
+    padding: 15px;
+    text-align: left;
+    border-bottom: 1px solid #34495e;
+}
 
-        .sidebar ul li a {
-            color: white;
-            text-decoration: none;
-        }
+.sidebar ul li a {
+    color: white;
+    text-decoration: none;
+}
 
-        .sidebar ul li a i {
-            margin-right: 10px;
-        }
+.sidebar ul li a i {
+    margin-right: 10px;
+}
 
-        .sidebar ul li:hover {
-            background-color: #34495e;
-        }
+.sidebar ul li:hover {
+    background-color: #34495e;
+}
 
-        .main-content {
-            margin-left: 250px;
-            padding: 20px;
-        }
+.main-content {
+    margin-left: 250px;
+    padding: 20px;
+}
 
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #2980b9;
-            color: white;
-            padding: 10px 20px;
-        }
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #2980b9;
+    color: white;
+    padding: 10px 20px;
+}
 
-        .notification {
-            position: relative;
-            cursor: pointer;
-        }
+.notification {
+    position: relative;
+    cursor: pointer;
+}
 
-        .notification i {
-            font-size: 24px;
-            color: white;
-        }
+.notification i {
+    font-size: 24px;
+    color: white;
+}
 
-        .badge {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background: red;
-            color: white;
-            font-size: 12px;
-            padding: 2px 6px;
-            border-radius: 50%;
-            display: none; /* Hidden by default */
-        }
+.badge {
+    position: absolute;
+    top: -5px;
+    right: -5px;
+    background: red;
+    color: white;
+    font-size: 12px;
+    padding: 2px 6px;
+    border-radius: 50%;
+    display: none; /* Hidden by default */
+}
 
-        #notificationsContainer {
-            position: absolute;
-            top: 25px;
-            right: 0;
-            background-color: white;
-            border: 1px solid #ccc;
-            padding: 10px;
-            display: none;
-            width: 200px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            z-index: 10;
-        }
+#notificationsContainer {
+    position: absolute;
+    top: 25px;
+    right: 0;
+    background-color: white;
+    border: 1px solid #ccc;
+    padding: 10px;
+    display: none;
+    width: 200px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
 
-        #notificationsList {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
+#notificationsList {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
-        #notificationsList li {
-            padding: 5px 0;
-        }
+#notificationsList li {
+    padding: 5px 0;
+}
 
-        .cards {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
+.cards {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
 
-        .card {
-            background: white;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            padding: 20px;
-            text-align: center;
-            width: 30%;
-        }
+.card {
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    text-align: center;
+    width: 30%;
+}
 
-        .card i {
-            font-size: 50px;
-            margin-bottom: 10px;
-        }
+.card i {
+    font-size: 50px;
+    margin-bottom: 10px;
+}
 
-        .card h3 {
-            margin: 10px 0;
-        }
+.card h3 {
+    margin: 10px 0;
+}
 
-        .card a {
-            text-decoration: none;
-            color: #2980b9;
-        }
+.card a {
+    text-decoration: none;
+    color: #2980b9;
+}
 
-        .table-section {
-            margin-top: 40px;
-        }
+.table-section {
+    margin-top: 40px;
+}
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-            background: white;
-            border-radius: 5px;
-            overflow: hidden;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    background: white;
+    border-radius: 5px;
+    overflow: hidden;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
 
-        th,
-        td {
-            text-align: left;
-            padding: 15px;
-            border-bottom: 1px solid #ddd;
-        }
+th,
+td {
+    text-align: left;
+    padding: 15px;
+    border-bottom: 1px solid #ddd;
+}
 
-        th {
-            background-color: #2980b9;
-            color: white;
-        }
+th {
+    background-color: #2980b9;
+    color: white;
+}
 
-        tr:hover {
-            background-color: #f1f1f1;
-        }
-
-
-</style>
-</head>
-<body>
-    <div class="sidebar" id="sidebar">
-        <h2>Dashboard</h2>
-        <ul>
-            <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="#"><i class="fas fa-users"></i> Users</a></li>
-            <li><a href="#"><i class="fas fa-cogs"></i> Settings</a></li>
-        </ul>
-    </div>
-    <div class="main-content">
-        <div class="header">
-            <button class="sidebar-toggle" onclick="toggleSidebar()">☰</button>
-            <div class="notification">
-                <i class="fas fa-bell"></i>
-                <span class="badge">3</span>
-            </div>
-        </div>
-        <div class="cards">
-            <div class="card">
-                <i class="fas fa-users"></i>
-                <h3>Users</h3>
-                <a href="#">View</a>
-            </div>
-            <div class="card">
-                <i class="fas fa-cogs"></i>
-                <h3>Settings</h3>
-                <a href="#">Manage</a>
-            </div>
-        </div>
-        <div class="table-section">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Item</th>
-                        <th>Description</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Item 1</td>
-                        <td>Details about item 1</td>
-                    </tr>
-                    <tr>
-                        <td>Item 2</td>
-                        <td>Details about item 2</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <script>
-        function toggleSidebar() {
-            const sidebar = document.getElementById('sidebar');
-            sidebar.classList.toggle('hidden');
-        }
-    </script>
-</body>
-</html>
+tr:hover {
+    background-color: #f1f1f1;
+}
 
     </style>
 </head>
@@ -247,7 +183,7 @@
             <li><a href="Tool.html"><i class="fas fa-box"></i> Tools</a></li>
             <li><a href="Chris.html"><i class="fas fa-box"></i> Chris</a></li>
             <li><a href="purchases.html"><i class="fas fa-sign-out-alt"></i> Purchases</a></li>
-            <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </div>
 
