--- a/dashboard.html
+++ b/dashboard.html
@@ -183,7 +183,7 @@ tr:hover {
             <li><a href="Tool.html"><i class="fas fa-box"></i> Tools</a></li>
             <li><a href="Chris.html"><i class="fas fa-box"></i> Chris</a></li>
             <li><a href="purchases.html"><i class="fas fa-sign-out-alt"></i> Purchases</a></li>
-            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+            <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </div>
 
