--- a/Tool.html
+++ b/Tool.html
@@ -153,9 +153,28 @@
 
             <label for="projectName">Project Name:</label>
             <select id="projectName" name="projectName" required>
-                <option value="Hazida Limited">Hazida Limited</option>
-                <option value="Hazida Motors">Hazida Motors</option>
-            </select>
+              <option value="Hazida Limited">Hazida Limited</option>
+<option value="Hazida Motors">Hazida Motors</option>
+<option value="Hazida Foods">Hazida Foods</option>
+<option value="Freight and Passengers">Freight and Passengers</option>
+<option value="Lumumba Showroom Ezone">Lumumba Showroom Ezone</option>
+<option value="Manda Hill Ezone Store">Manda Hill Ezone Store</option>
+<option value="Cento Ezone Store">Cento Ezone Store</option>
+<option value="Cosmopolitan Ezone Store">Cosmopolitan Ezone Store</option>
+<option value="Trident Ezone Store">Trident Ezone Store</option>
+<option value="Kitwe Ezone Store">Kitwe Ezone Store</option>
+<option value="Livingstone Ezone Store">Livingstone Ezone Store</option>
+<option value="Mr Mussa">Mr Mussa</option>
+<option value="Mr Ebrahim">Mr Ebrahim</option>
+<option value="Madam Shirin">Madam Shirin</option>
+<option value="Mr Ishmil">Mr Ishmil</option>
+<option value="Mr Shabbir">Mr Shabbir</option>
+<option value="Mr Riaz">Mr Riaz</option>
+<option value="Mr Faiyaz">Mr Faiyaz</option>
+<option value="Northmeads Flats 1">Northmeads Flats 1</option>
+<option value="Northmeads Flats 2">Northmeads Flats 2</option>
+<option value="Fields Works">Fields Works</option>
+
 
             <label for="toolName">Tool Name:</label>
             <select id="toolName" name="toolName" required>
