--- a/Tool.html
+++ b/Tool.html
@@ -147,13 +147,27 @@
         <form id="assignToolForm" onsubmit="assignTool(event)">
             <label for="employeeName">Employee Name:</label>
             <select id="employeeName" name="employeeName" required>
-                <option value="Brighton Matolokosh">Brighton Matolokosh</option>
-                <option value="Caphas Tembo">Caphas Tembo</option>
+                <option value="BRIGHTON MATOLOKOSH">BRIGHTON MATOLOKOSH</option>
+<option value="CAPHAS TEMBO">CAPHAS TEMBO</option>
+<option value="CLISHA MAMBILIMA">CLISHA MAMBILIMA</option>
+<option value="DABSON DAKA">DABSON DAKA</option>
+<option value="DANNY MVULA">DANNY MVULA</option>
+<option value="JAMES DAKA">JAMES DAKA</option>
+<option value="JOSEPH TEMBO">JOSEPH TEMBO</option>
+<option value="LUCKSON PHIRI">LUCKSON PHIRI</option>
+<option value="MICHEAL LOBELA">MICHEAL LOBELA</option>
+<option value="OBERT SIAME">OBERT SIAME</option>
+<option value="DOMINIC SAKALA">DOMINIC SAKALA</option>
+<option value="PETER MAWERE">PETER MAWERE</option>
+<option value="SAVIOUR PHIRI">SAVIOUR PHIRI</option>
+<option value="TEMBEYA SAKALA">TEMBEYA SAKALA</option>
+<option value="KEVIN SIAME">KEVIN SIAME</option>
+
             </select>
 
             <label for="projectName">Project Name:</label>
             <select id="projectName" name="projectName" required>
-              <option value="Hazida Limited">Hazida Limited</option>
+                <option value="Hazida Limited">Hazida Limited</option>
 <option value="Hazida Motors">Hazida Motors</option>
 <option value="Hazida Foods">Hazida Foods</option>
 <option value="Freight and Passengers">Freight and Passengers</option>
@@ -175,6 +189,7 @@
 <option value="Northmeads Flats 2">Northmeads Flats 2</option>
 <option value="Fields Works">Fields Works</option>
 
+            </select>
 
             <label for="toolName">Tool Name:</label>
             <select id="toolName" name="toolName" required>
